# AutoIntent

./: .buildinfo  .gitignore  CONTRIBUTING.md  Makefile  README.md  concepts.html  genindex.html  index.html  objects.inv  output.txt  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  ruff.toml  search.html  searchindex.js  user_guides.html
.doctrees/: concepts.doctree  index.doctree  quickstart.doctree  user_guides.doctree
.doctrees/guides/: embeddings_proxy_optimization.doctree  index.doctree  optimization_results.doctree
.doctrees/learn/: dialogue_systems.doctree  embeddings.doctree  index.doctree  optimization.doctree
.doctrees/user_guides/: index_advanced_usage.doctree  index_basic_usage.doctree  index_cli_usage.doctree  user_guides.advanced.01_data.doctree  user_guides.advanced.02_search_space.doctree  user_guides.advanced.03_caching.doctree  user_guides.basic_usage.01_data.doctree  user_guides.basic_usage.02_modules.doctree  user_guides.basic_usage.03_automl.doctree  user_guides.basic_usage.04_inference.doctree  user_guides.cli.01_search_space.doctree  user_guides.cli.02_basic_usage.doctree
.github/workflows/: build-docs.yaml  minimal-optimization.yaml  release.yaml  ruff.yml  test-inference.yaml  test-nodes.yaml  test-optimization.yaml  tests.yaml  typing.yml  unit-tests.yaml
_sources/: concepts.rst.txt  quickstart.rst.txt
_sources/learn/: dialogue_systems.rst.txt  index.rst.txt  optimization.rst.txt
_sources/user_guides/: index_basic_usage.rst.txt  index_cli_usage.rst.txt  user_guides.advanced.03_caching.py.txt  user_guides.basic_usage.02_modules.py.txt  user_guides.basic_usage.03_automl.py.txt  user_guides.cli.01_search_space.py.txt
autoapi/autointent/: Context.html  Dataset.html  Embedder.html  Hasher.html  Pipeline.html  index.html
autointent/: __init__.py  _embedder.py  _hash.py  api.py  base_pipeline.py  cache_utils.py  custom_types.py  data_handler.py  logger.py  types.py  utils.py
autointent/_callbacks/: base.py
autointent/_datafiles/: default-multiclass-config.yaml  default-multilabel-config.yaml  dstc3-20shot.json  inference-config-example.yaml
autointent/_dataset/: __init__.py  _dataset.py  _validation.py
autointent/_pipeline/: __init__.py  _cli_endpoint.py  _pipeline.py
autointent/configs/: __init__.py  _inference_node.py  _inference_pipeline.py  _name.py  _node.py  _optimization_cli.py  _pipeline_optimizer.py  inference_cli.py  inference_pipeline.py  name.py  node.py  optimization_cli.py  pipeline.py  pipeline_optimizer.py
autointent/context/: __init__.py  _context.py  _utils.py  context.py  data_handler.py  embedder.py  optimization_info.py  optimization_logs.py  utils.py  vector_index.py
autointent/data_handler/: __init__.py  main.py  stratified_splitting.py
autointent/datafiles/: banking77.json  default-multiclass-config.yaml  default-multilabel-config.yaml  dstc3-20shot.json  inference-config-example.yaml
autointent/docs_utils/: __init__.py  notebook.py  regenerate_apiref.py
autointent/generation/: __init__.py  description_generation.py  generate_utterances.py  generator.py  prompt_scheme.py  prompts.py  utils.py
autointent/inference_configs/: node.py
autointent/metrics/: __init__.py  _converter.py  converter.py  custom_types.py  decision.py  prediction.py  regexp.py  retrieval.py  scoring.py
autointent/modules/: __init__.py  _base.py  _regexp.py  base.py  regexp.py
autointent/nodes/: __init__.py  _inference_node.py  base.py  prediction.py  regexp.py  retrieval.py  scoring.py
autointent/pipeline/: __init__.py  _cli_endpoint.py  _pipeline.py  _schemas.py  main.py  optimization.py  pipeline.py
autointent/schemas/: __init__.py  _schemas.py
data/: ac_robotic_2_raw.json  autopilot_intents.json  ordering_intents.json  robotics_val.csv
data/intent_records/: ac_merged.json  ac_ordering.json  ac_robotic.json  ac_robotic_new.json  ac_robotic_val.json  banking77.json  banking77_test.json  clinc150.json  dream.json  dream_sampled.json  hwu64.json  massive.json  minds14.json  ru_banking77.json  ru_clinc150.json  ru_dream.json  ru_hwu64.json  ru_massive.json  ru_minds14.json  ru_snips.json  snips.json
data/intent_records_regexp/: banking77.json  clinc150.json  hwu64.json  minds14.json  ru_banking77.json  ru_clinc150.json  ru_hwu64.json  ru_minds14.json  ru_snips.json  snips.json
data/multi_label_data/: ac_robotic.json  dstc3-10shot.json  dstc3-5shot.json  dstc3.json  eurlex-10shot.json  eurlex-20shot.json  (+7 more)
dev/: .buildinfo  concepts.html  genindex.html  py-modindex.html  search.html  searchindex.js  user_guides.html
docs/: conf.py  education.md  index.rst
example_configs/: example_1.yaml  example_2.yaml  example_3.yaml  example_4.yaml
experiments/: base_pipeline.ipynb  data_convertion.ipynb  rename.py
guides/: embeddings_proxy_optimization.html  index.html  optimization_results.html
learn/: dialogue_systems.html  embeddings.html  index.html  optimization.html
scripts/: add_collocations.py  base_pipeline.py  regex_sampling.py  transform_json_to_dataset.py  xeger_sampling.py
src/: data_handler.py
tests/: conftest.py  test_knn_counter.py  test_retrieval_metrics.py  test_retrieval_metrics_intersecting.py  test_retrieval_metrics_tolerant.py  test_scorer_utils.py  test_scoring_metrics.py  test_topk.py
tutorials/: data.py
user_guides/: index_advanced_usage.html  index_basic_usage.html  index_cli_usage.html  user_guides.advanced.01_data.html  user_guides.advanced.01_data.ipynb  user_guides.advanced.02_search_space.html  user_guides.advanced.02_search_space.ipynb  user_guides.advanced.03_caching.html  user_guides.advanced.03_caching.ipynb  user_guides.basic_usage.01_data.html  user_guides.basic_usage.01_data.ipynb  user_guides.basic_usage.02_modules.html  user_guides.basic_usage.02_modules.ipynb  user_guides.basic_usage.03_automl.html  user_guides.basic_usage.04_inference.html  user_guides.cli.01_search_space.html  user_guides.cli.02_basic_usage.html  user_guides.cli.02_basic_usage.ipynb
v0.0.1/: index.html  objects.inv  search.html  searchindex.js  user_guides.html
(+2405 files in other folders)
