[tool.poetry]
name = "autointent"
version = "0.2.1-alpha1"
description = "A tool for automatically configuring a text classification pipeline for intent prediction."
authors = ["voorhs <ilya_alekseev_2016@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "3.0.1"
chromadb = "0.5.5"
scikit-learn = "1.5.1"
scikit-multilearn = "0.2.0"
pysqlite3-binary = "^0.5.3.post1"
appdirs = "^1.4.4"
sre-yield = "^1.2"
optuna = "^4.0.0"
xeger = "^0.4.0"
pathlib = "^1.0.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
datasets = "2.20.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.8"

[tool.poetry.scripts]
"autointent" = "autointent.pipeline.main:main"
"clear-cache" = "autointent.pipeline.utils.cache:clear_chroma_cache"

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TD", "ANN", "FIX", "S311",  "COM812", "ISC001", "ERA001", "FBT", "TID252"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["S", "PLR2004", "ERA", "D", "ANN", "SLF"]
"experiments/*" = ["ALL"]
"scripts/*" = ["ALL"]

[tool.ruff.lint.pylint]
max-args = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra" # `--cov` option breaks pycharm's test debugger
testpaths = [
    "tests",
]
pythonpath = "autointent"
